samples/_failures_safe/1761253006_02d6fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_214e421e.c: In function ‘main’:
./samples/SAFE/__tmp_214e421e.c:157:9: error: expected declaration or statement at end of input
  157 |         if (!add_edge(&graph, src, dest, weight)) {
      |         ^~
./samples/SAFE/__tmp_214e421e.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_214e421e.c:157:9: error: expected declaration or statement at end of input
